--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
